--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,3 +67,9 @@ syncro_git = "src.fix:syncro_git"
 [tool.taskipy.tasks]
 pre_lint = { cmd = "echo 'Black' && black .", help = "apply the black linter"}
 lint = { cmd = "ruff check . --fix", help = "apply ruff linter"}
+
+[dependency-groups]
+dev = [
+    "black>=25.12.0",
+    "ruff>=0.14.8",
+]
