--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = ""
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "click>=8.3.1",
     "pyinstaller>=6.17.0",
     "taskipy>=1.14.1",
     "tqdm>=4.67.1",
