--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "video"
+name = "fix_video"
 version = "0.1.0"
 description = ""
 readme = "README.md"
@@ -18,6 +18,8 @@ dev = [
     "ruff>=0.14.8",
 ]
 
+[project.scripts]
+may = "main:main"
 
 
 #######################################################
@@ -64,5 +66,5 @@ syncro_git = "src.fix:syncro_git"
 pre_lint = { cmd = "echo 'Black' && black .", help = "apply the black linter"}
 lint = { cmd = "ruff check . --fix", help = "apply ruff linter"}
 tree = "uv tree > .pip.tree"
-gen_fix_video = "uv run pyinstaller --onefile --clean --name fix_video src/main.py --name fix_video.exe --target-arch x86_64"
-
+gen_fix_video = "uvx run pyinstaller --onefile --clean --name fix_video src/main.py --name fix_video.exe --target-arch x86_64"
+gg = 'uv run --frozen pyinstaller --onefile --clean --name fix_video --add-data "src;src" --hidden-import=main --collect-submodules=click --collect-all=click src/main.py --target-arch x86_64'
