--- a/.gitignore
+++ b/.gitignore
@@ -5,14 +5,14 @@
 __pycache__
 origem
 
-# Pyinstaller
+Pyinstaller
 *.manifest
 *.spec
 *.exe
 build
 dist
-src
 *.egg-info
 
 __ffprobe_report.json
 __compress_report_ffmpeg.json
+
