--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,6 @@ build
 dist
 *.egg-info
 
-__ffprobe_report.json
-__compress_report_ffmpeg.json
-
+__ffprobe_report.*
+__compress_report_ffmpeg.*
+__error_report.*
