--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,6 @@ pre_lint = { cmd = "echo 'Black' && black .", help = "apply the black linter"}
 lint = { cmd = "ruff check . --fix", help = "apply ruff linter"}
 tree = "uv tree > .pip.tree"
 gen = "task gen_fix_video && task gen_fix_image"
-gen_fix_video = "uv run pyinstaller --onefile --clean --name fix_video.exe --target-arch x86_64 src/launcher.py"
+gen_fix_video = "uv run pyinstaller --onefile --clean --name fix_video.exe --target-arch x86_64 src/launcher_fix_video.py"
 gen_fix_image = "uv run pyinstaller --onefile --clean --name fix_image.exe --target-arch x86_64 src/launcher_fix_image.py"
 gg = 'uv run --frozen pyinstaller --onefile --clean --name fix_video --add-data "src;src" --hidden-import=main --collect-submodules=click --collect-all=click src/main.py --target-arch x86_64'
