--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "click>=8.3.1",
+    "dateparser>=1.2.2",
     "pillow>=12.1.0",
     "pyinstaller>=6.17.0",
     "taskipy>=1.14.1",
